2008-10-26  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-25  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-24  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: fix bug where glListed
	  layer was returning instead of continuing to next layer

2008-10-23  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Main.cs: copy improvements from Appomattox
	* Cumberland.Drawing.OpenGL/MatrixHelper.cs: switch to doubles

2008-10-22  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/TileProvider.aspx.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs,
	  Cumberland.Data.PostGIS/PostGIS.cs: add postgis point support

2008-10-22  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.PostGIS/PostGIS.cs: add multipolygon wkt support

2008-10-20  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-20  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/TileProvider.aspx.cs: add more layers

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Main.cs,
	  Cumberland.TileViewerTest/TileProvider.aspx.cs: add stub for GDI+
	  drawer
	* cumberland.sln, Cumberland.Drawing.OpenGL/GluMethods.cs,
	  Cumberland.Drawing.OpenGL/app.config,
	  Cumberland.Drawing.OpenGL/Cumberland.Drawing.OpenGL.csproj,
	  Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs, Cumberland.GluWrap,
	  Cumberland.GluWrap/AssemblyInfo.cs,
	  Cumberland.GluWrap/GluMethods.cs, Cumberland.GluWrap/app.config,
	  Cumberland.GluWrap/Cumberland.GluWrap.csproj: move GluMethods into
	  Drawing.OpenGL

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Main.cs: track changes